--- a/home/sway/waybar/style.css
+++ b/home/sway/waybar/style.css
@@ -3,7 +3,7 @@
 * {
     border: none;
     border-radius: 0px;
-    font-family: 'FiraCode Nerd Font Mono';
+    font-family: 'FiraCode Nerd Font';
     font-size: 16px;
     min-height: 0;
 }
